syntax = "proto3";

option go_package = "github.com/douyu/jupiter/xfieldmask;xfieldmask";

package xfieldmask;

// The greeting service definition.
service GreeterService {
  // Sends a hello greeting
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
}
// The request message containing the user's name.
message SayHelloRequest {
  // name ...
  string name = 1;
}

// The response message containing the greetings
message SayHelloResponse {
  // Data is the data to be sent.
  message Data {
    // name of the user
    string name = 1;
    // age_number is the age number.
    uint64 age_number = 2;
    // sex is the user's sex
    Sex sex = 3;
    // metadata is the user's metadata
    map<string,string> metadata = 4;
  }
  // error
  uint32 error = 1;
  // msg
  string msg = 2;
  // data ...
  Data data = 3;
}

// Sex
enum Sex {
  // SEX_UNSPECIFIED ...
  SEX_UNSPECIFIED = 0;
  // SEX_MALE ...
  SEX_MALE = 1;
  // SEX_FEMALE ...
  SEX_FEMALE = 2;
}
